# coreml-FastViT-T8

./: BUILD.bazel  MODULE.bazel  README.md
FastViTT8F16.mlpackage/: Manifest.json
FastViTT8F16.mlpackage/Data/com.apple.CoreML/: model.mlmodel
