load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_precompiled_resource_bundle")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

apple_precompiled_resource_bundle(
    name = "example.resource_bundle",
    bundle_name = "Example_Resources",
    resources = ["FastViTT8F16.mlpackage"],
)

swift_library(
    name = "example.library",
    data = ["example.resource_bundle"],
    srcs = ["Empty.swift"],
    testonly = True,
)

ios_unit_test(
    name = "example.test",
    deps = ["example.library"],
    minimum_os_version = "17.0",
    runner = "@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
)
